--- a/_config.yml
+++ b/_config.yml
@@ -369,6 +369,7 @@ enable_navbar_social:       false  # enables displaying social links in the navb
 enable_project_categories:  true   # enables categorization of projects into multiple categories
 enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
 enable_progressbar:         true   # enables a horizontal progress bar linked to the vertical scroll position
+enable_headingcolor:        true   # enables color for the first three letters of a heading
 
 # -----------------------------------------------------------------------------
 # Library versions
