--- a/_config.yml
+++ b/_config.yml
@@ -278,10 +278,10 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Riasat]
+  first_name: [Sheikh, S.]
 
-  style: apa
+  style: springer-mathphys-brackets
   locale: en
 
   source: /_bibliography/
@@ -300,8 +300,9 @@ scholar:
   details_link: Details
 
   query: "@*"
-  group_by: year
+  group_by: type
   group_order: descending
+  type_names: {unpublished: Preprints}
 
 # Display different badges withs stats for your publications
 enable_publication_badges:
