--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ icon: favicon.png  # the emoji used as the favicon (alternatively, provide image
 
 url: https://thefermi0n.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
-last_updated: true # set to true if you want to display last updated in the footer
+last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 cv_pdf: cv.pdf # name of the CV PDF if any
 
@@ -51,7 +51,7 @@ navbar_fixed: true
 footer_fixed: false
 
 # Dimensions
-max_width: 800px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
