--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ google_analytics: G-CEHNGRC8FK # your Google Analytics measurement ID (format: G
 cronitor_analytics:  # cronitor RUM analytics site ID (format: XXXXXXXXX)
 
 # For Google Search Console, see https://support.google.com/webmasters/answer/9008080?hl=en#meta_tag_verification&zippy=%2Chtml-tag
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification: googlee49f61752bb6569f.html # your google-site-verification ID (Google Search Console)
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # # -----------------------------------------------------------------------------
